# dotenv-enum

./: .env  .gitignore  Cargo.toml  README.md
sample/: .env  Cargo.toml
sample/src/: main.rs
src/: env_errors.rs  lib.rs
