[package]
name = "dotenv-enum"
version = "0.2.1"
edition = "2021"
authors = ["Émile Boucher <emileboucheracc@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/bhuzgujj/dotenv-enum.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

# Enum iteration
strum = "0.24.1"
strum_macros = "0.24.1"

# Testing
test-case = "2.2.2"